--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header {
     border: 1px solid red;
 } */
 
-header div {
+header div a {
     width: 120px;
     margin: auto;
     background-image: linear-gradient(90deg, #9572FC 0%, #43E7AD 50.52%, #E2D45C 100%);
@@ -43,7 +43,7 @@ header div {
     transition: transform .3s;
 }
 
-header div:hover {
+header div a:hover {
     transform: scale(1.1);
 }
 
